--- a/dedekind.cabal
+++ b/dedekind.cabal
@@ -13,15 +13,15 @@ extra-doc-files:    CHANGELOG.md
 -- extra-source-files:
 
 common warnings
-    ghc-options: -Wall
+    ghc-options: -fno-warn-incomplete-uni-patterns 
 
 executable dedekind
     import:           warnings
     main-is:          Main.hs
-    other-modules:    Solver , Parser , KanSolver, AgdaShow
+    other-modules:    Solver , Parser , KanSolver, AgdaShow, CellContext, Contortion, ContortionSolver
     -- other-extensions:
     build-depends:    attoparsec >= 0.14.4,
-                      base ^>=4.17.0.0,
+                      base >=4.15.0.0,
                       containers >= 0.6.6,
                       mtl >= 2.2.2,
                       optparse-applicative >= 0.18.1.0,
