--- a/dedekind.cabal
+++ b/dedekind.cabal
@@ -28,3 +28,17 @@ executable dedekind
                       text >= 2.0.1
     hs-source-dirs:   app
     default-language: Haskell2010
+
+executable dedekind-std
+    import:           warnings
+    main-is:          MainStd.hs
+    other-modules:    Solver , Parser , KanSolver, AgdaShow, CellContext, Contortion, ContortionSolver
+    -- other-extensions:
+    build-depends:    attoparsec >= 0.14.4,
+                      base >=4.15.0.0,
+                      containers >= 0.6.6,
+                      mtl >= 2.2.2,
+                      optparse-applicative >= 0.18.1.0,
+                      text >= 2.0.1
+    hs-source-dirs:   app
+    default-language: Haskell2010
